--- a/index.html
+++ b/index.html
@@ -104,13 +104,14 @@
 
     // 🔑 Firebase Config
     const firebaseConfig = {
-      apiKey: "API_KEY_ASLI",
-      authDomain: "coba-8f9af.firebaseapp.com",
-      projectId: "coba-8f9af",
-      storageBucket: "coba-8f9af.appspot.com",
-      messagingSenderId: "375276847460",
-      appId: "1:375276847460:web:xxxxxxxxxx",
-    };
+  apiKey: "AIzaSyCSKjBcT_oc7Lc991ZQehtrZku0r8ocvE8",
+  authDomain: "coba-8f9af.firebaseapp.com",
+  projectId: "coba-8f9af",
+  storageBucket: "coba-8f9af.firebasestorage.app",
+  messagingSenderId: "375276847460",
+  appId: "1:375276847460:web:f1df0de167aa1612cc7a71",
+  measurementId: "G-97Y1D758BR"
+};
 
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
@@ -120,42 +121,40 @@
 
     // =================== LOGIN ===================
     async function login(){
-  const email = document.getElementById("loginEmail").value;
-  const pass = document.getElementById("loginPass").value;
-  try {
-    const userCred = await signInWithEmailAndPassword(auth, email, pass);
-    const user = userCred.user;
+      const email = document.getElementById("loginEmail").value;
+      const pass = document.getElementById("loginPass").value;
+      try {
+        const userCred = await signInWithEmailAndPassword(auth, email, pass);
+        const user = userCred.user;
 
-    document.getElementById("loginBox").style.display = "none";
-    document.getElementById("mainContent").style.display = "block";
+        document.getElementById("loginBox").style.display = "none";
+        document.getElementById("mainContent").style.display = "block";
 
-    if(user.email === adminEmail){
-      // === ADMIN ===
-      alert("✅ Login sebagai Admin");
-      document.getElementById("btnMember").style.display = "inline-block";
-      document.getElementById("btnPayment").style.display = "inline-block";
-      showTab("memberTab");
-      loadMembers();
-      loadPayments();
-      loadMemberList();
-    } else {
-      // === BUKAN ADMIN ===
-      alert("ℹ️ Login berhasil tapi bukan admin → hanya Report");
-      document.getElementById("btnMember").style.display = "none";
-      document.getElementById("btnPayment").style.display = "none";
-      showTab("reportTab");
+        if(user.email === adminEmail){
+          alert("✅ Login sebagai Admin");
+          document.getElementById("btnMember").style.display = "inline-block";
+          document.getElementById("btnPayment").style.display = "inline-block";
+          showTab("memberTab");
+          loadMembers();
+          loadPayments();
+          loadMemberList();
+        } else {
+          alert("ℹ️ Login sebagai User biasa (Report saja)");
+          document.getElementById("btnMember").style.display = "none";
+          document.getElementById("btnPayment").style.display = "none";
+          showTab("reportTab");
+        }
+
+      } catch(err){
+        // gagal login → guest (Report saja)
+        alert("❌ Login gagal, masuk sebagai Guest (Report saja)");
+        document.getElementById("loginBox").style.display = "none";
+        document.getElementById("mainContent").style.display = "block";
+        document.getElementById("btnMember").style.display = "none";
+        document.getElementById("btnPayment").style.display = "none";
+        showTab("reportTab");
+      }
     }
-
-  } catch(err){
-    // === LOGIN GAGAL ===
-    alert("❌ Login gagal, masuk sebagai Guest (Report saja)");
-    document.getElementById("loginBox").style.display = "none";
-    document.getElementById("mainContent").style.display = "block";
-    document.getElementById("btnMember").style.display = "none";
-    document.getElementById("btnPayment").style.display = "none";
-    showTab("reportTab");
-  }
-}
     window.login = login;
 
     // =================== MEMBER CRUD ===================
