--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>Sistem Member & Pembayaran</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; background: #f7f7f7; }
-    nav button { margin: 5px; padding: 8px 12px; }
+    h2 { margin-bottom: 10px; }
+    nav button { margin: 5px; padding: 10px; }
     .tab { display: none; margin-top: 20px; }
     table { border-collapse: collapse; width: 100%; margin-top: 10px; }
     table, th, td { border: 1px solid #ccc; }
@@ -16,6 +17,7 @@
   </style>
 </head>
 <body>
+
   <h2>📋 Sistem Member & Pembayaran</h2>
 
   <!-- =================== LOGIN =================== -->
@@ -37,27 +39,20 @@
 
     <!-- =================== MEMBER =================== -->
     <div id="memberTab" class="tab">
-      <h3>Tambah / Edit Member</h3>
+      <h3>Tambah Member</h3>
       <form id="memberForm">
-        <input type="hidden" id="memberDocId">
         <label>ID<br><input type="text" id="memberID" required></label><br>
         <label>Nama<br><input type="text" id="memberName" required></label><br>
         <label>Alamat<br><input type="text" id="memberAddress" required></label><br>
         <label>No HP<br><input type="text" id="memberPhone" required></label><br>
-        <button type="submit">Simpan</button>
+        <button type="submit">Simpan Member</button>
       </form>
-      <h4>Daftar Member</h4>
-      <table id="memberTable">
-        <thead><tr><th>ID</th><th>Nama</th><th>Alamat</th><th>HP</th><th>Aksi</th></tr></thead>
-        <tbody></tbody>
-      </table>
     </div>
 
     <!-- =================== PAYMENT =================== -->
     <div id="paymentTab" class="tab">
-      <h3>Tambah / Edit Pembayaran</h3>
+      <h3>Tambah Pembayaran</h3>
       <form id="paymentForm">
-        <input type="hidden" id="paymentDocId">
         <label>ID Member<br>
           <input list="memberList" id="payID" required>
           <datalist id="memberList"></datalist>
@@ -68,13 +63,8 @@
         <label>Tahun<br><input type="number" id="payYear" required></label><br>
         <label>Bulan<br><input type="number" id="payMonth" min="1" max="12" required></label><br>
         <label>Tanggal Bayar<br><input type="date" id="payDate" required></label><br>
-        <button type="submit">Simpan</button>
+        <button type="submit">Simpan Pembayaran</button>
       </form>
-      <h4>Daftar Pembayaran</h4>
-      <table id="paymentTable">
-        <thead><tr><th>ID</th><th>Nama</th><th>Tahun</th><th>Bulan</th><th>Tanggal</th><th>Aksi</th></tr></thead>
-        <tbody></tbody>
-      </table>
     </div>
 
     <!-- =================== REPORT =================== -->
@@ -82,6 +72,7 @@
       <h3>Report Rekap (Matrix Jan–Des)</h3>
       <label>Tahun <input type="number" id="reportYear" value="2025"></label>
       <button onclick="generateReport()">Tampilkan</button>
+      <button onclick="exportExcel()">Export Excel</button>
       <button onclick="window.print()">Print</button>
       <table id="reportTable">
         <thead>
@@ -99,19 +90,19 @@
   <!-- =================== FIREBASE =================== -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { getFirestore, collection, addDoc, getDocs, doc, updateDoc, deleteDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+    import { getFirestore, collection, addDoc, getDocs } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
     import { getAuth, signInWithEmailAndPassword, signOut } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
 
-    // 🔑 Firebase Config
+    // ✅ Config Firebase
     const firebaseConfig = {
-  apiKey: "AIzaSyCSKjBcT_oc7Lc991ZQehtrZku0r8ocvE8",
-  authDomain: "coba-8f9af.firebaseapp.com",
-  projectId: "coba-8f9af",
-  storageBucket: "coba-8f9af.firebasestorage.app",
-  messagingSenderId: "375276847460",
-  appId: "1:375276847460:web:f1df0de167aa1612cc7a71",
-  measurementId: "G-97Y1D758BR"
-};
+	apiKey: "AIzaSyCSKjBcT_oc7Lc991ZQehtrZku0r8ocvE8",
+	authDomain: "coba-8f9af.firebaseapp.com",
+	projectId: "coba-8f9af",
+	storageBucket: "coba-8f9af.firebasestorage.app",
+	messagingSenderId: "375276847460",
+	appId: "1:375276847460:web:f1df0de167aa1612cc7a71",
+	measurementId: "G-97Y1D758BR"
+	};
 
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
@@ -135,8 +126,6 @@
           document.getElementById("btnMember").style.display = "inline-block";
           document.getElementById("btnPayment").style.display = "inline-block";
           showTab("memberTab");
-          loadMembers();
-          loadPayments();
           loadMemberList();
         } else {
           alert("ℹ️ Login sebagai User biasa (Report saja)");
@@ -157,63 +146,23 @@
     }
     window.login = login;
 
-    // =================== MEMBER CRUD ===================
-    async function loadMembers(){
-      const membersSnap = await getDocs(collection(db, "members"));
-      const tbody = document.querySelector("#memberTable tbody");
-      tbody.innerHTML = "";
-      membersSnap.forEach(docSnap=>{
-        const m = docSnap.data();
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
-          <td>${m.id}</td>
-          <td>${m.name}</td>
-          <td>${m.address}</td>
-          <td>${m.phone}</td>
-          <td>
-            <button onclick="editMember('${docSnap.id}','${m.id}','${m.name}','${m.address}','${m.phone}')">Edit</button>
-            <button onclick="deleteMember('${docSnap.id}')">Hapus</button>
-          </td>`;
-        tbody.appendChild(tr);
-      });
-    }
-    window.loadMembers = loadMembers;
-
-    async function editMember(docId,id,name,address,phone){
-      document.getElementById("memberDocId").value = docId;
-      document.getElementById("memberID").value = id;
-      document.getElementById("memberName").value = name;
-      document.getElementById("memberAddress").value = address;
-      document.getElementById("memberPhone").value = phone;
-    }
-    window.editMember = editMember;
-
-    async function deleteMember(docId){
-      if(confirm("Yakin hapus member ini?")){
-        await deleteDoc(doc(db,"members",docId));
-        loadMembers();
-      }
-    }
-    window.deleteMember = deleteMember;
-
+    // =================== FORM MEMBER ===================
     document.getElementById("memberForm").addEventListener("submit", async function(e){
       e.preventDefault();
-      const docId = document.getElementById("memberDocId").value;
       const data = {
         id: document.getElementById("memberID").value.trim(),
         name: document.getElementById("memberName").value,
         address: document.getElementById("memberAddress").value,
         phone: document.getElementById("memberPhone").value
       };
-      if(docId){
-        await updateDoc(doc(db,"members",docId),data);
-      } else {
-        await addDoc(collection(db,"members"),data);
+      try {
+        const docRef = await addDoc(collection(db, "members"), data);
+        alert("✅ Member berhasil disimpan!");
+        this.reset();
+        loadMemberList();
+      } catch (err) {
+        alert("❌ Gagal simpan member: " + err.message);
       }
-      this.reset();
-      document.getElementById("memberDocId").value = "";
-      loadMembers();
-      loadMemberList();
     });
 
     // =================== AUTO FILL PAYMENT ===================
@@ -247,52 +196,9 @@
       }
     });
 
-    // =================== PAYMENT CRUD ===================
-    async function loadPayments(){
-      const paymentsSnap = await getDocs(collection(db, "payments"));
-      const tbody = document.querySelector("#paymentTable tbody");
-      tbody.innerHTML = "";
-      paymentsSnap.forEach(docSnap=>{
-        const p = docSnap.data();
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
-          <td>${p.id}</td>
-          <td>${p.name}</td>
-          <td>${p.year}</td>
-          <td>${p.month}</td>
-          <td>${p.date}</td>
-          <td>
-            <button onclick="editPayment('${docSnap.id}','${p.id}','${p.name}','${p.address}','${p.phone}',${p.year},${p.month},'${p.date}')">Edit</button>
-            <button onclick="deletePayment('${docSnap.id}')">Hapus</button>
-          </td>`;
-        tbody.appendChild(tr);
-      });
-    }
-    window.loadPayments = loadPayments;
-
-    async function editPayment(docId,id,name,address,phone,year,month,date){
-      document.getElementById("paymentDocId").value = docId;
-      document.getElementById("payID").value = id;
-      document.getElementById("payName").value = name;
-      document.getElementById("payAddress").value = address;
-      document.getElementById("payPhone").value = phone;
-      document.getElementById("payYear").value = year;
-      document.getElementById("payMonth").value = month;
-      document.getElementById("payDate").value = date;
-    }
-    window.editPayment = editPayment;
-
-    async function deletePayment(docId){
-      if(confirm("Yakin hapus pembayaran ini?")){
-        await deleteDoc(doc(db,"payments",docId));
-        loadPayments();
-      }
-    }
-    window.deletePayment = deletePayment;
-
+    // =================== FORM PAYMENT ===================
     document.getElementById("paymentForm").addEventListener("submit", async function(e){
       e.preventDefault();
-      const docId = document.getElementById("paymentDocId").value;
       const data = {
         id: document.getElementById("payID").value.trim(),
         name: document.getElementById("payName").value,
@@ -302,14 +208,13 @@
         month: parseInt(document.getElementById("payMonth").value),
         date: document.getElementById("payDate").value
       };
-      if(docId){
-        await updateDoc(doc(db,"payments",docId),data);
-      } else {
-        await addDoc(collection(db,"payments"),data);
+      try {
+        await addDoc(collection(db, "payments"), data);
+        alert("✅ Pembayaran berhasil disimpan!");
+        this.reset();
+      } catch (err) {
+        alert("❌ Gagal simpan pembayaran: " + err.message);
       }
-      this.reset();
-      document.getElementById("paymentDocId").value = "";
-      loadPayments();
     });
 
     // =================== REPORT ===================
@@ -346,6 +251,7 @@
 
     function logout(){
       signOut(auth).then(()=>{
+        alert("Logout berhasil!");
         location.reload();
       });
     }
