--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   apiKey: "AIzaSyCSKjBcT_oc7Lc991ZQehtrZku0r8ocvE8",
   authDomain: "coba-8f9af.firebaseapp.com",
   projectId: "coba-8f9af",
-  storageBucket: "coba-8f9af.firebasestorage.app",
+  storageBucket: "coba-8f9af.appspot.com",
   messagingSenderId: "375276847460",
   appId: "1:375276847460:web:f1df0de167aa1612cc7a71",
   measurementId: "G-97Y1D758BR"
