--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <!-- =================== LOGIN =================== -->
   <div id="loginBox">
     <h3>Login</h3>
-    <input type="email" id="loginEmail" placeholder="Email" value="Email">
-    <input type="password" id="loginPass" placeholder="Password" value="Password">
+    <input type="email" id="loginEmail" placeholder="Email">
+    <input type="password" id="loginPass" placeholder="Password">
     <button onclick="login()">Login</button>
   </div>
 
