--- a/index.html
+++ b/index.html
@@ -163,20 +163,25 @@
       const membersSnap = await getDocs(collection(db, "members"));
       const tbody = document.querySelector("#memberTable tbody");
       tbody.innerHTML = "";
-      membersSnap.forEach(docSnap=>{
-        const m = docSnap.data();
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
-          <td>${m.id}</td>
-          <td>${m.name}</td>
-          <td>${m.address}</td>
-          <td>${m.phone}</td>
-          <td>
-            <button onclick="editMember('${docSnap.id}','${m.id}','${m.name}','${m.address}','${m.phone}')">Edit</button>
-            <button onclick="deleteMember('${docSnap.id}')">Hapus</button>
-          </td>`;
-        tbody.appendChild(tr);
-      });
+      let members = [];
+membersSnap.forEach(docSnap=>{
+  members.push({docId: docSnap.id, ...docSnap.data()});
+});
+members.sort((a,b)=> a.id.localeCompare(b.id)); // urut berdasar ID
+
+members.forEach(m=>{
+  const tr = document.createElement("tr");
+  tr.innerHTML = `
+    <td>${m.id}</td>
+    <td>${m.name}</td>
+    <td>${m.address}</td>
+    <td>${m.phone}</td>
+    <td>
+      <button onclick="editMember('${m.docId}','${m.id}','${m.name}','${m.address}','${m.phone}')">Edit</button>
+      <button onclick="deleteMember('${m.docId}')">Hapus</button>
+    </td>`;
+  tbody.appendChild(tr);
+});
     }
     window.loadMembers = loadMembers;
 
@@ -253,21 +258,26 @@
       const paymentsSnap = await getDocs(collection(db, "payments"));
       const tbody = document.querySelector("#paymentTable tbody");
       tbody.innerHTML = "";
-      paymentsSnap.forEach(docSnap=>{
-        const p = docSnap.data();
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
-          <td>${p.id}</td>
-          <td>${p.name}</td>
-          <td>${p.year}</td>
-          <td>${p.month}</td>
-          <td>${p.date}</td>
-          <td>
-            <button onclick="editPayment('${docSnap.id}','${p.id}','${p.name}','${p.address}','${p.phone}',${p.year},${p.month},'${p.date}')">Edit</button>
-            <button onclick="deletePayment('${docSnap.id}')">Hapus</button>
-          </td>`;
-        tbody.appendChild(tr);
-      });
+      let payments = [];
+paymentsSnap.forEach(docSnap=>{
+  payments.push({docId: docSnap.id, ...docSnap.data()});
+});
+payments.sort((a,b)=> a.id.localeCompare(b.id)); // urut berdasar ID
+
+payments.forEach(p=>{
+  const tr = document.createElement("tr");
+  tr.innerHTML = `
+    <td>${p.id}</td>
+    <td>${p.name}</td>
+    <td>${p.year}</td>
+    <td>${p.month}</td>
+    <td>${p.date}</td>
+    <td>
+      <button onclick="editPayment('${p.docId}','${p.id}','${p.name}','${p.address}','${p.phone}',${p.year},${p.month},'${p.date}')">Edit</button>
+      <button onclick="deletePayment('${p.docId}')">Hapus</button>
+    </td>`;
+  tbody.appendChild(tr);
+});
     }
     window.loadPayments = loadPayments;
 
@@ -326,15 +336,20 @@
 
       const tbody = document.querySelector("#reportTable tbody");
       tbody.innerHTML = "";
-      membersSnap.forEach(doc=>{
-        const m = doc.data();
-        const row = document.createElement("tr");
-        row.innerHTML = `
-          <td>${m.id}</td><td>${m.name}</td><td>${m.address}</td><td>${m.phone}</td><td>${year}</td>
-          ${[1,2,3,4,5,6,7,8,9,10,11,12].map(mo=>"<td>"+(payments[m.id+"-"+year+"-"+mo]?"✔":"-")+"</td>").join("")}
-        `;
-        tbody.appendChild(row);
-      });
+      let members = [];
+membersSnap.forEach(doc=>{
+  members.push(doc.data());
+});
+members.sort((a,b)=> a.id.localeCompare(b.id)); // urut ID
+
+members.forEach(m=>{
+  const row = document.createElement("tr");
+  row.innerHTML = `
+    <td>${m.id}</td><td>${m.name}</td><td>${m.address}</td><td>${m.phone}</td><td>${year}</td>
+    ${[1,2,3,4,5,6,7,8,9,10,11,12].map(mo=>"<td>"+(payments[m.id+"-"+year+"-"+mo]?"✔":"-")+"</td>").join("")}
+  `;
+  tbody.appendChild(row);
+});
     }
     window.generateReport = generateReport;
 
